--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "rich>=14.1.0",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
 ]
 
 [build-system]
