--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "Equal1", email = "info@equal1.com" }]
 requires-python = ">=3.12"
 dependencies = [
+    "dwave-tabu>=0.5.0",
     "ipykernel>=6.30.0",
     "ipython>=9.4.0",
     "ipywidgets>=8.1.7",
